--- a/App.css
+++ b/App.css
@@ -1,3 +1,5 @@
+
+
 :root{
   --mainBlue:#2a2a72;
   --lightBlue:#009ffd;
@@ -52,4 +54,85 @@ body{
   font-size: 1rem;
   color: var(--cadetBlue);
   
+}
+
+.itemBlock{
+  background: url('https://cdn.mos.cms.futurecdn.net/4rJWhkwYXXhDjUwcrY34g4.jpg') no-repeat
+       center fixed;
+       z-index: -1;
+       -webkit-background-size: cover;
+       -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: grid;
+ 
+}
+
+.itemBlock_info{
+  display: block;
+  flex-direction: column;
+  height: 360px;
+  text-align: center;
+}
+
+.itemBlock_infoText{
+  text-align: center;
+  flex: 1;
+}
+.itemBlock_infoText h4 {
+  padding-top: 10px;
+  border-bottom: 1px solid black;
+}
+
+.itemBlock_actions{
+  padding-right: 30px;
+}
+
+.itemBlock_primary {
+  cursor: pointer;
+  border: 0.05rem solid var(--mainDark);
+  padding: 0.2rem 0.5rem;
+  color:turquoise;
+  border-radius: 50px;
+  text-transform: uppercase;
+  font-weight: 600;
+  outline: none;
+  width:130px;
+  transition: all 0.5s ease-in-out;
+  
+}
+
+.itemBlock_primary:hover{
+  background: var(--lightBlue);
+    color:var(--mainBlue);
+}
+
+.section{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.main-heading{
+  color: rgb(204,18,18);
+  font-size: 26px;
+}
+
+.underline{
+  height: 04px;
+  width: 4rem;
+  background-color: #f76c2f;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.bg-c-light{
+  background-color: #f2f2f2
+
+}
+.bg-c-dark{
+  background-color: #f0ffff;
 }
